# book-writer-chat

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  telegram-setup.md
frontend/: .env.example  package-lock.json  package.json  svelte.config.js
specs/: backend-messenger-agent.md  backend-reader-api.md  book-structure.md  codex-cli-execution.md  deployment.md  domain-model.md  frontend-approved-packages.md  frontend.md  messenger-provider-contracts.md  product-overview.md  system-architecture.md  web-messenger.md
specs/build_plan/: 000-index.md  010-foundation-and-workspace.md  020-domain-persistence-and-book-workspace.md  030-reader-api-and-render-pipeline.md  040-frontend-reader-shell.md  041-web-authentication.md  042-web-book-provisioning-and-conversation-registry.md  043-web-conversation-session-transcript-api.md  044-web-messenger-shell-and-conversation-list.md  045-reader-selection-mention-flow.md  050-messenger-adapters-and-command-routing.md  060-agent-execution-and-job-lifecycle.md  070-end-to-end-authoring-flow.md  071-app-module-refactor.md  075-deployment-packaging-and-runtime.md  080-observability-hardening-and-release-readiness.md
src/: lib.rs  main.rs
src/app/: auth.rs  errors.rs  logging.rs  metrics.rs  mod.rs  router.rs  state.rs  test_support.rs  web_books.rs  web_conversations.rs
src/authoring/: executor.rs  flow.rs  mod.rs  prompt.rs
src/core/: config.rs  models.rs
src/messaging/: commands.rs  handlers.rs  media.rs  mod.rs
src/reader/: content.rs  handlers.rs  html.rs  links.rs  mod.rs
(+55 files in other folders)
