[package]
name = "book-writer-chat"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = { version = "0.7.9", features = ["macros", "multipart"] }
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
hmac = "0.12.1"
http = "1.3.1"
pulldown-cmark = "0.12.2"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json"] }
walkdir = "2.5.0"

[dev-dependencies]
http-body-util = "0.1.3"
tempfile = "3.23.0"
